--- a/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-extraProperties=sonar.jdbc.username\=root\r\nsonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.host.url\=http\://localhost\:9000\r\nsonar.jdbc.password\=12369\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar
+extraProperties=sonar.jdbc.driver\=com.mysql.jdbc.Driver\r\nsonar.host.url\=http\://localhost\:9000\r\nsonar.jdbc.password\=12369\r\nsonar.jdbc.url\=jdbc\:mysql\://localhost\:3306/sonar\r\nsonar.jdbc.username\=root
 projectKey=HelloJPA\:HelloJPA
 serverUrl=http\://localhost\:9000
 version=2
